--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lucide-react": "^0.555.0",
     "next": "^16.0.5",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "remark-directive": "^4.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
